statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-database
  namespace: default
spec:
  serviceName: postgres
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      terminationGracePeriodSeconds: 30

      imagePullSecrets:
        - name: dhi-registry

      containers:
        - name: postgres
          image: dhi.io/postgres:18-alpine3.23-dev

          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U $POSTGRES_USER
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U $POSTGRES_USER
            initialDelaySeconds: 30
            periodSeconds: 10

          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"

            limits:
              memory: "2Gi"
              cpu: "1"

  volumeClaimTemplates:
    - metadata:
        name: postgres-storage

      spec:
        accessModes: ["ReadWriteOnce"]

        storageClassName: ""

        resources:
          requests:
            storage: 20Gi
